import enum


class HardSkill(enum.Enum):
    logics = "logics",
    literacy = "literacy",
    creativity = "creativity",
    erudition = "erudition"
