class Person:
    def __init__(self, name: str, age: int) -> None:
        self.__name: str = name
        self.__age: int = age

    def get_name(self) -> str:
        return self.__name

    def get_age(self) -> int:
        return self.__age


