import enum


class SoftSkill(enum.Enum):
    communication = "communication",
    physical_endurance = "physical_endurance",
    attentiveness = "attentiveness",
    patience = "patience"
